{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 40,
  "lineage": "ec701f6c-2f89-02b4-40bf-cf9e22f49265",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081db664f283a733c",
            "association_id": "eipassoc-00f0c97d629cfe921",
            "domain": "vpc",
            "id": "eipalloc-081db664f283a733c",
            "network_border_group": "us-west-2",
            "network_interface": "eni-08ad8e689513c12d8",
            "private_dns": "ip-10-21-141-117.us-west-2.compute.internal",
            "private_ip": "10.21.141.117",
            "public_dns": "ec2-44-227-169-124.us-west-2.compute.amazonaws.com",
            "public_ip": "44.227.169.124",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip"
            },
            "tags_all": {
              "Name": "eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721598558192:internet-gateway/igw-0368a88f5d723a30a",
            "id": "igw-0368a88f5d723a30a",
            "owner_id": "721598558192",
            "tags": {
              "Name": "ca-igw"
            },
            "tags_all": {
              "Name": "ca-igw"
            },
            "vpc_id": "vpc-049f187abbf144aca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-gw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081db664f283a733c",
            "connectivity_type": "public",
            "id": "nat-08e006dfc29ad2477",
            "network_interface_id": "eni-08ad8e689513c12d8",
            "private_ip": "10.21.141.117",
            "public_ip": "44.227.169.124",
            "subnet_id": "subnet-0a2896de00a9614aa",
            "tags": {
              "Name": "ngw"
            },
            "tags_all": {
              "Name": "ngw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.ca-public-subnet-b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721598558192:route-table/rtb-0baaa60b41d621a8e",
            "id": "rtb-0baaa60b41d621a8e",
            "owner_id": "721598558192",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08e006dfc29ad2477",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-049f187abbf144aca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.ngw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.NAT-gw",
            "module.vpc.aws_subnet.ca-public-subnet-b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721598558192:route-table/rtb-0181a25f48b5562c0",
            "id": "rtb-0181a25f48b5562c0",
            "owner_id": "721598558192",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0368a88f5d723a30a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-049f187abbf144aca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-a",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7d21746f12d4427",
            "route_table_id": "rtb-0baaa60b41d621a8e",
            "subnet_id": "subnet-015b69951505fe1dd"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.NAT-gw",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.ca-private-subnet-a",
            "module.vpc.aws_subnet.ca-public-subnet-b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-b",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069b9403e545d2018",
            "route_table_id": "rtb-0baaa60b41d621a8e",
            "subnet_id": "subnet-0906a0d87d7dd0b04"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.NAT-gw",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.ca-private-subnet-b",
            "module.vpc.aws_subnet.ca-public-subnet-b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-a",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf558d898a1d6c6e",
            "route_table_id": "rtb-0181a25f48b5562c0",
            "subnet_id": "subnet-0ff50e19b350d9601"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.ca-public-subnet-a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-b",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004f3a2999b60c4e2",
            "route_table_id": "rtb-0181a25f48b5562c0",
            "subnet_id": "subnet-0a2896de00a9614aa"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.ca-public-subnet-b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_security_group",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721598558192:security-group/sg-040579e6b75be6dfd",
            "description": "Allow traffic to Ci servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040579e6b75be6dfd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221109200358614700000001",
            "name_prefix": "terraform-",
            "owner_id": "721598558192",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-049f187abbf144aca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ca-private-subnet-a",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721598558192:subnet/subnet-015b69951505fe1dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.21.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015b69951505fe1dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721598558192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ca-private-subnet-a"
            },
            "tags_all": {
              "Name": "ca-private-subnet-a"
            },
            "vpc_id": "vpc-049f187abbf144aca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ca-private-subnet-b",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721598558192:subnet/subnet-0906a0d87d7dd0b04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.21.144.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0906a0d87d7dd0b04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721598558192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ca-private-subnet-b"
            },
            "tags_all": {
              "Name": "ca-private-subnet-b"
            },
            "vpc_id": "vpc-049f187abbf144aca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ca-public-subnet-a",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721598558192:subnet/subnet-0ff50e19b350d9601",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.21.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff50e19b350d9601",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721598558192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ca-public-subnet-a"
            },
            "tags_all": {
              "Name": "ca-public-subnet-a"
            },
            "vpc_id": "vpc-049f187abbf144aca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ca-public-subnet-b",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721598558192:subnet/subnet-0a2896de00a9614aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.21.128.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2896de00a9614aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721598558192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ca-public-subnet-b"
            },
            "tags_all": {
              "Name": "ca-public-subnet-b"
            },
            "vpc_id": "vpc-049f187abbf144aca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721598558192:vpc/vpc-049f187abbf144aca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.21.0.0/16",
            "default_network_acl_id": "acl-0bc56770cca108033",
            "default_route_table_id": "rtb-0ce0c9ca61c2f6b0a",
            "default_security_group_id": "sg-087689c0abc77f290",
            "dhcp_options_id": "dopt-07c29a53b9f657969",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-049f187abbf144aca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ce0c9ca61c2f6b0a",
            "owner_id": "721598558192",
            "tags": {
              "Name": "jenkins-vpc"
            },
            "tags_all": {
              "Name": "jenkins-vpc"
            }
          }
        }
      ]
    }
  ]
}